--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>1300762 Blogi</title>
+		<title>Protokollat</title>
 
 		<meta name="description" content="Verkkosovelluskehitys, LTP7026, 4 op">
 		<meta name="author" content="Risto Partanen">
@@ -41,10 +41,11 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>1300762 Blogi</h1>
-					<h2>Päivälistaus</h2>
+					<h1>Protokollat</h1>
+					<h2>Internet Protokolla</h2>
+					<h2>TCP Protokolla</h2>
 					<ul>
-						<li><a href="#/2">Päivä 1</a></li>
+						<li><a href="#/2">Internet Protokolla</a></li>
 					</ul>
 					<p>
 						<small>Risto Partanen</a></small>
@@ -52,7 +53,15 @@
 				</section>
 
 				<section>
-					<h2>Päivä 1</h2>
+				
+					<h2>Internet Protokolla</h2>
+
+					<p>Internet Protokolla on ehkäpä kaikkein tärkein protokolla, koska kaikki muut protokollat hyödyntävät sitä. </br>
+					IP-protokolla ei luo varsinaista yhteyttä kahden laitteen välillä, joten sitä kutsutaan yhteydettömäksi protokollaksi. </br>
+					IP-protokolla ei huolehdi siitä että paketti varmasti on saapunut pisteestä A pisteeseen B. </br>
+					Tietyissä tilanteissa IP-protokolla "hyödyntää" myös ICMP protokollaa, mutta nämä ovat lähinnä tapauksia joissa IP paketin siirrossa on tapahtunut jokin virhe ja siitä pitää saada tieto lähettäjälle. </br>
+					</p>
+
 				</section>
 			</div>
 		</div>
