--- a/index.html
+++ b/index.html
@@ -58,9 +58,11 @@
 
 					<p>Internet Protokolla on ehkäpä kaikkein tärkein protokolla, koska kaikki muut protokollat hyödyntävät sitä. </br>
 					IP-protokolla ei luo varsinaista yhteyttä kahden laitteen välillä, joten sitä kutsutaan yhteydettömäksi protokollaksi. </br>
-					IP-protokolla ei huolehdi siitä että paketti varmasti on saapunut pisteestä A pisteeseen B. </br>
+					Yhteydetön protokolla tarkoittaa, että IP-protokolla ei huolehdi siitä onko paketti varmasti on saapunut pisteestä A pisteeseen B? </br>
 					Tietyissä tilanteissa IP-protokolla "hyödyntää" myös ICMP protokollaa, mutta nämä ovat lähinnä tapauksia joissa IP paketin siirrossa on tapahtunut jokin virhe ja siitä pitää saada tieto lähettäjälle. </br>
-					</p>
+					</p> 
+					</br>
+					<img src="/Images/IP_Packet.gif" alt="HTML5 Icon" style="width:161px;height:278px;">
 
 				</section>
 			</div>
