--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 							<li>TCP-pakettiin  määritellään lähdekoneen porttinumero + kohdekoneen porttinumero.</li>
 							<li>TCP-paketti jossa on DATA + lähdekoneen porttinumero + kohdekoneen porttinumero laitetaan IP-pakettiin.</li>
 							<li>IP-paketti laitetaan verkkoon ns. ethernet kehyksessä (frame).</li>
-							<li>Vastaanottavassa päässä kaikki tapahtuu päinvastaisessa järjestyksessä hyödyntäen porttinumeroa johon DATA on menossa.</li>
+							<li>Vastaanottavassa päässä kaikki tapahtuu päinvastaisessa järjestyksessä hyödyntäen porttinumeroa.</li>
 						</ul>
 				</section>
 				<section>
